--- a/dashboard.html
+++ b/dashboard.html
@@ -479,14 +479,14 @@ const displayPost = (post, container, isMyPost) => {
                 </div>
               </div>
     </div>
-    <div class="caption">
+    <div class="caption" style="margin-top: -10px;>
      ${post.content}
     </div>
     <div class="post-image toggle-comments">
       <img src="${post.imageUrl}" alt="Post content">
     </div>
  
-    <div class="profile-details">
+    <div class="caption">
     <div class="profile-stats">
         <div>
           <h3><i class="ri-heart-line"></i></h3>
