--- a/dashboard.html
+++ b/dashboard.html
@@ -489,7 +489,7 @@ const displayPost = (post, container, isMyPost) => {
       <span class="count">123</span>
     </div>
     <div class="action-item">
-      <i class="ri-comment-line"></i>
+      <i class="ri-message-3-line"></i>
       <span class="count">45</span>
     </div>
   </div>
